elements/rh-cta/rh-cta.css
/* ... */
/** Default variant arrow icon */
pf-icon {
  vertical-align: middle;
  margin-inline-start: calc(0px - var(--pf-icon--size));
}

svg {
  vertical-align: middle;
  margin-inline-start: calc(0px - var(--_arrow-size));
  display: inline;
  fill: currentcolor;
  width: var(--_arrow-size);
  height: var(--_arrow-size);
  translate: 0 0;
  transition: translate var(--_trans);

  --_trans:
    var(--rh-animation-speed, 0.3s)
    var(--rh-animation-timing, cubic-bezier(0.465, 0.183, 0.153, 0.946));
}

#container.rtl svg {
  rotate: 180deg;
}

/*****************************************************************************
 * FOCUS STATE                                                               *
 *****************************************************************************/

:host(:is(:focus, :focus-within)),
:host(:is(:focus, :focus-within)) ::slotted(*),
::slotted(:focus) {
  outline: none !important;
}

:host(:is(:focus, :focus-within)) {
  --rh-cta-background-color: var(--rh-cta-focus-background-color);
}

:host(:is(:focus, :focus-within)) #container {
  border-color: var(--rh-cta-focus-border-color);
  background-color: var(--rh-cta-focus-container-background-color,
    var(--rh-cta-focus-background-color));

  --rh-cta-color: var(--rh-cta-focus-color);
  --rh-cta-text-decoration: var(--rh-cta-focus-text-decoration);
}

:host(:is(:focus, :focus-within)) #container:after {
  border-style: solid;
  border-color: var(--rh-cta-focus-inner-border-color);
}

/*****************************************************************************
 * HOVER STATE                                                               *
 *****************************************************************************/

:host(:hover) #container {
  color: var(--rh-cta-hover-color);
  border-color: var(--rh-cta-hover-border-color);
  background-color: var(--rh-cta-hover-background-color);

  --rh-cta-text-decoration: var(--rh-cta-hover-text-decoration);
}

:host(:hover) #container svg {
  translate: 3px 0;
}

:host(:hover) #container.rtl svg {
  translate: -3px 0;
}

/*****************************************************************************
 * ACTIVE STATE                                                              *
 *****************************************************************************/

:host(:active) {
  background-color: var(--rh-cta-active-background-color);
}

:host(:active) #container {
  --rh-cta-background-color: var(--rh-cta-active-container-background-color,
    var(--rh-cta-active-background-color));
}

:host(:active) #container:after {
  border-style: solid;
  border-color: var(--rh-cta-active-inner-border-color) !important;
}


/*****************************************************************************
 * VARIANTS                                                                  *
 *****************************************************************************/

:host([variant]) #container {
  font-size: var(--rh-font-size-body-text-md, 1rem);
  border-radius: var(--rh-border-radius-default, 3px);
  border-width: var(--rh-border-width-sm, 1px);
  padding-inline: 0;
}

:host([variant]) #container ::slotted(*) {
  padding: var(--rh-space-lg, 16px) var(--rh-space-xl, 24px) !important;
  display: inline-flex !important;
}

:host([variant$="ary"]) #container ::slotted(*) {
  font-size: var(--rh-cta-font-size-priority, var(--rh-font-size-text-lg, 1rem));
  text-align: center;
}

:host([variant]) #container.icon {
  padding-inline: var(--rh-space-xl, 24px) !important;
  padding-block: var(--rh-space-lg, 16px) !important;
  text-align: center;
}

:host([variant]) #container.icon ::slotted(*) {
  display: inline !important;
  padding-inline: 0 !important;
}

:host([variant]) #container.svg ::slotted(*) {
  padding-inline-end: calc(var(--_arrow-plus-padding) + var(--rh-space-xl, 24px)) !important;
}

:host([variant]) #container.icon pf-icon {
  margin-inline: var(--rh-space-lg, 16px);
}

/* prefer to group state-bound styles */
/* stylelint-disable-next-line no-descending-specificity */
:host([variant]) #container svg {
  margin-inline-start: calc(-24px - var(--pf-icon--size));
  margin-inline-end: var(--rh-space-xl, 24px);
  display: none;
}

/*****************************************************************************
 * DEFAULT
 *****************************************************************************/

:host(:not([variant])) {
  --rh-cta-background-color: transparent;
  --rh-cta-border-color: transparent;
  --rh-cta-color: var(--rh-color-interactive-blue, #0066cc);
  --rh-cta-hover-background-color: transparent;
  --rh-cta-hover-border-color: transparent;
  --rh-cta-hover-inner-border-color: transparent;
  --rh-cta-hover-color: var(--rh-color-interactive-blue-darkest, #004080);
  --rh-cta-hover-text-decoration: none;
  --rh-cta-focus-background-color: transparent;

  /* --rh-color-border-interactive-on-light with 10% opacity */
  --rh-cta-focus-container-background-color: #0066cc1a;
  --rh-cta-focus-border-color: transparent;
  --rh-cta-focus-inner-border-color: transparent;
  --rh-cta-focus-color: var(--rh-color-interactive-blue-darker, #0066cc);
  --rh-cta-focus-text-decoration: none;

  /* --rh-color-border-interactive-on-light with 10% opacity */
  --rh-cta-active-container-background-color: #0066cc1a;
  --rh-cta-active-inner-border-color: transparent;
  --rh-cta-active-text-decoration: none;
}
/* ... */

